# wc2026-checklist-stickers

./: .gitignore  AGENTS.md  INSTRUCTIONS.md  LICENSE  README.md  build.mjs  package.json  rollup.config.ts  tsconfig.json  verification_report.md  vitest.config.ts
.opencode/command/: opsx-archive.md  opsx-bulk-archive.md
.opencode/plans/: rename-project-remove-trademarks-plan.md
.opencode/skills/openspec-archive-change/: SKILL.md
.opencode/skills/openspec-bulk-archive-change/: SKILL.md
docs/: CHANGELOG.md  README-es.md  README.md  RELEASE-v1.0.0.txt  RELEASE-v1.2.0.txt  RELEASE-v2.0.0.txt  STYLE-GUIDE.md  disclaimer-store.md  index-es.md  index.md  release-workflow.md  ui_theme.md
docs/MOCKUPS/: export.md  main-menu.md  mark-duplicate.md  mark-owned.md  search.md  statistics.md  view-collection.md
openspec/changes/apply-ui-theme/: design.md  proposal.md  tasks.md
openspec/changes/gui-mobile-support/: design.md  tasks.md
openspec/changes/improve-collection-usability/: design.md  proposal.md  tasks.md
openspec/changes/release-v1-2-0/: design.md  proposal.md  tasks.md
src/: index.ts
src/config/: appVersion.ts
src/data/: stickers.csv
src/gui/: README.md  index.html  package.json
src/gui/src/: App.tsx  (+3 more)
src/gui/src-tauri/: Cargo.toml  tauri.conf.json
src/gui/src-tauri/capabilities/: default.json
src/gui/src-tauri/icons/: icon.icns
src/gui/src-tauri/src/: lib.rs
tests/gui/: collection-view-model.test.ts  export-source-filter.test.ts  statistics-model.test.ts  sticker-sections.test.ts
tests/infrastructure/: export-source-filter.test.ts
(+155 files in other folders)
