[package]
name = "panini-wc-2026"
version = "1.0.3"
description = "Panini FIFA World Cup 2026 Sticker Checklist"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
printpdf = "0.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
dirs = "6.0.0"
